--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: native_video_view
+name: custom_video_player
 description: A video player widget displayed using the platform native player (VideoView in Android and AVPlayer in iOS).
 version: 1.0.0
 homepage: https://github.com/LJaraCastillo/native_video_view
