--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: custom_video_player
 description: A video player widget displayed using the platform native player (VideoView in Android and AVPlayer in iOS).
 version: 1.0.0
-homepage: https://github.com/LJaraCastillo/native_video_view
-repository: https://github.com/LJaraCastillo/native_video_view
+publish_to: 'none'
 
 environment:
   sdk: ">=2.14.0 <3.0.0"
